--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header class="header">
         <div class="header-left">
             <div class="logo">
-                <img src="/src/ketonal.png" alt="Ketonal Logo" class="logo-img">
+                <img src="src/ketonal.png" alt="Ketonal Logo" class="logo-img">
             </div>
 
             <nav class="nav-menu">
@@ -293,3 +293,4 @@
 </body>
 
 </html>
+
