--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
 <video autoplay muted loop playsinline class="background-video">
-    <source src="/src/background.mp4" type="video/mp4">
+    <source src="src/background.mp4" type="video/mp4">
 </video>
 
 <div class="container">
@@ -39,7 +39,7 @@
             <nav class="nav-menu">
                 <a href="#main" class="nav-link">Главная</a>
                 <a href="#about" class="nav-link">О проекте</a>
-                <a href="/wiki" class="nav-link">Вики</a>
+                <a href="wiki" class="nav-link">Вики</a>
 <!--                <a href="/news" class="nav-link">Новости</a>-->
             </nav>
         </div>
@@ -292,5 +292,6 @@
 </body>
 
 </html>
+
 
 
